//
//  AccessibilityIdentifiers.swift
//  MovieQuiz
//
//  Created by Ди Di on 13/02/25.
//

struct AccessibilityIdentifiers {
    static let gameResults = "gameResults"
}
